# fsql

./: CMakeLists.txt  LICENSE.md  PROGRESS.md  README.md  progress.md
core/: CMakeLists.txt
core/include/: ColumnMetadata.h  ConsoleOutputWriter.h  CoroTypes.h  CsvStorage.h  ExecutionResult.h  ExecutionTypes.h  Executor.h  ExpressionEvaluation.h  ForkJoinScheduler.h  ICoroExecutor.h  IOutputWriter.h  IStorage.h  MemoryStorage.h  ParallelCoroExecutor.h  Parser.h  SelectExecution.h  SelectExecutionDetail.h  SerialCoroExecutor.h  SqlAst.h  SqlData.h  SqlError.h  SqlSerialization.h  SqlToken.h  SqlTypes.h  StringUtils.h  Tokenizer.h
core/src/: ColumnMetadata.cpp  ConsoleOutputWriter.cpp  CsvStorage.cpp  Executor.cpp  ExpressionEvaluation.cpp  ExpressionValue.cpp  MemoryStorage.cpp  Parser.cpp  ParserExpressions.cpp  ParserStatements.cpp  SelectAggregation.cpp  SelectExecution.cpp  SelectPlanning.cpp  SqlSerialization.cpp  Tokenizer.cpp
fsql/: CMakeLists.txt  main.cpp
fsql/include/: Application.h  CliHelp.h  QueryInput.h
fsql/src/: Application.cpp  CliHelp.cpp  QueryInput.cpp
fsqllib/: CMakeLists.txt
fsqllib/include/: BuiltinStorageRegistration.h  ColumnMetadata.h  ConsoleOutputWriter.h  CoroTypes.h  CsvStorage.h  ExecutionResult.h  ExecutionTypes.h  Executor.h  ExpressionEvaluation.h  FileStorage.h  FileStorageBase.h  FileStorageSupport.h  ForkJoinScheduler.h  ICoroExecutor.h  IOutputWriter.h  IStorage.h  JsonStorage.h  MemoryStorage.h  ParallelCoroExecutor.h  Parser.h  SelectExecution.h  SelectExecutionDetail.h  SerialCoroExecutor.h  SqlAst.h  SqlData.h  SqlError.h  SqlSerialization.h  SqlToken.h  SqlTypes.h  StorageFormatUtils.h  StorageRegistry.h  StringUtils.h  Tokenizer.h  TomlStorage.h  XmlStorage.h  YamlStorage.h
fsqllib/src/: BuiltinStorageRegistration.cpp  ColumnMetadata.cpp  ConsoleOutputWriter.cpp  CsvStorage.cpp  Executor.cpp  ExpressionEvaluation.cpp  ExpressionValue.cpp  FileStorage.cpp  FileStorageBase.cpp  FileStorageSupport.cpp  JsonStorage.cpp  MemoryStorage.cpp  Parser.cpp  ParserExpressions.cpp  ParserStatements.cpp  SelectAggregation.cpp  SelectExecution.cpp  SelectPlanning.cpp  SqlSerialization.cpp  StorageFormatUtils.cpp  StorageRegistry.cpp  Tokenizer.cpp  TomlStorage.cpp  XmlStorage.cpp  YamlStorage.cpp
fsqltests/: CMakeLists.txt  concrete_storage_contract_tests.cpp  coroutine_stream_tests.cpp  csv_storage_escape_csv_tests.cpp  csv_storage_load_table_tests.cpp  csv_storage_parse_csv_line_tests.cpp  executor_execute_complex_sql_tests.cpp  executor_execute_crud_tests.cpp  executor_execute_defaults_tests.cpp  executor_execute_expression_tests.cpp  executor_execute_select_tests.cpp  memory_storage_column_index_tests.cpp  memory_storage_load_table_tests.cpp  parser_parse_expression_tests.cpp  parser_parse_statement_tests.cpp  test_support.h  tokenizer_tokenize_tests.cpp
fsqltests/fixtures/: big_file.csv  file_source_tasks.csv  file_source_teams.csv
fsqltools/: CMakeLists.txt  fsql_table_gen.cpp
sql/: CMakeLists.txt  main.cpp
sql/include/: Application.h  CliHelp.h  QueryInput.h
sql/src/: Application.cpp  CliHelp.cpp  QueryInput.cpp
tests/: CMakeLists.txt  coroutine_stream_tests.cpp  csv_storage_escape_csv_tests.cpp  csv_storage_load_table_tests.cpp  csv_storage_parse_csv_line_tests.cpp  doctest.h  executor_execute_complex_sql_tests.cpp  executor_execute_crud_tests.cpp  executor_execute_defaults_tests.cpp  executor_execute_expression_tests.cpp  executor_execute_select_tests.cpp  memory_storage_column_index_tests.cpp  memory_storage_load_table_tests.cpp  parser_parse_expression_tests.cpp  parser_parse_statement_tests.cpp  sql_tests.cpp  test_support.h  tokenizer_tokenize_tests.cpp
